--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="./assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Indeams - Social Prescribing CYPs</title>
-    <script type="module" crossorigin src="/assets/index.d0b29118.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.5a676291.js">
-    <link rel="stylesheet" href="/assets/index.ed1ca6d6.css">
+    <script type="module" crossorigin src="./assets/index.d0b29118.js"></script>
+    <link rel="modulepreload" href="./assets/vendor.5a676291.js">
+    <link rel="stylesheet" href="./assets/index.ed1ca6d6.css">
   </head>
   <body class="antialiased tracking-tight text-gray-200 bg-gray-900 font-inter">
     <noscript>You need to enable JavaScript to run this app.</noscript>
