--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Indeams - Social Prescribing CYPs</title>
+    <title>Indeams - Marketplace of communities for CYPs</title>
     <!-- Hotjar Tracking Code for https://indeams.com -->
 <script>
   (function(h,o,t,j,a,r){
